// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`démarre la partie 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "lanceur": Object {
    "flechettesRestantes": 3,
    "nom": "J1",
  },
  "peutDemarrer": false,
  "phase": "EN_COURS",
}
`;

exports[`inscrit des joueurs 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
  "lanceur": null,
  "peutDemarrer": false,
  "phase": "INSCRIPTION",
}
`;

exports[`inscrit des joueurs 2`] = `
Object {
  "joueurs": Array [
    "J1",
    "J2",
  ],
  "lanceur": null,
  "peutDemarrer": true,
  "phase": "INSCRIPTION",
}
`;

exports[`retourne le state initial 1`] = `
Object {
  "joueurs": Array [],
  "lanceur": null,
  "peutDemarrer": false,
  "phase": "INSCRIPTION",
}
`;
